--- a/index.html
+++ b/index.html
@@ -13,15 +13,29 @@
       padding: 2em;
       min-height: 100vh;
     }
+      
     header {
-      text-align: center;
-      padding: 1.5em;
-      background: rgba(255, 255, 255, 0.068);
-      border-radius: 16px;
+      position: sticky;
+      top: 0;
+      z-index: 999;
       backdrop-filter: blur(20px) saturate(180%);
       -webkit-backdrop-filter: blur(20px) saturate(180%);
+      background: rgba(255, 255, 255, 0.18);
       border: 1px solid rgba(255, 255, 255, 0.164);
-      box-shadow: 0 4px 30px rgba(0,0,0,0.08);
+      padding: 1.2em;
+      border-radius: 16px;
+      max-width: 900px;
+      margin: 0 auto;
+      box-shadow: 0 4px 25px rgba(0,0,0,0.1);
+      transition: backdrop-filter 0.3s ease, background 0.3s ease;
+    }
+
+    
+    h1 {
+      color: #fff;
+      font-size: 2.5em;
+      margin: 0;
+      text-shadow: 0 2px 10px rgba(0,0,0,0.3);
     }
     section {
       padding: 2em;
@@ -39,7 +53,7 @@
       transform: translateY(-3px);
       box-shadow: 0 6px 30px rgba(0,0,0,0.15);
     }
-    h1, h2, h3 {
+    h2, h3 {
       color: #111;
     }
     .video-grid {
@@ -70,7 +84,7 @@
       transform: translate(-50%, -50%);
       font-size: 3em;
       color: white;
-      text-shadow: 0 0 20px rgba(255, 255, 255, 0.164);
+      text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
       opacity: 0.85;
       transition: transform 0.2s, opacity 0.2s;
     }
@@ -85,6 +99,10 @@
       backdrop-filter: blur(10px);
       -webkit-backdrop-filter: blur(10px);
       border: 1px solid rgba(255, 255, 255, 0.199);
+      margin-top: 0.5em;
+    }
+    .playlist > div {
+      margin-bottom: 1.5em;
     }
     .catalogo-card {
       text-align: center;
@@ -110,6 +128,19 @@
       background: linear-gradient(90deg, #0055cc, #00aaff);
       transform: scale(1.05);
     }
+    .catalogo-card img {
+      max-width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.15);
+      margin-top: 1em;
+    }
+    #chatContainer {
+      margin-top: 1em;
+      padding: 1em;
+      background: rgba(255, 255, 255, 0.5);
+      border-radius: 12px;
+      min-height: 300px;
+    }
     footer {
       text-align: center;
       padding: 1em;
@@ -119,6 +150,7 @@
       border: 1px solid rgba(255, 255, 255, 0.185);
       margin-top: 2em;
       font-size: 1em;
+      color: #fff;
     }
   </style>
 </head>
@@ -127,31 +159,8 @@
     <h1 class="titulo-principal">TuNoSaBeNa</h1>
   </header>
 
-  <!-- Imagen destacada (centrada, responsiva) -->
-  <div style="text-align:center; margin-top:1em;">
-    <img class="artwork-image" src="https://rdomint.com/images/station/domint1596img06-04-20251749048958.jpeg" alt="ALOFOKE 99.3 FM" style="max-width:100%; height:auto; border-radius:12px; box-shadow:0 4px 20px rgba(0,0,0,0.15);">
-  </div>
-  
-  <section id="catalogo">
-    <h2>🎧 RADIO DE TOO UN CHIN🎼</h2>
-    <div class="catalogo-card">
-      <p>MUSICA PA GO SA .</p>
-      <a href="https://rdomiplayer.com/landing/radio/1596/1" target="_blank">
-        <button>ESCUCHA RADIO DOMINICANA</button>
-      </a>
 
-      <!-- Player de radio integrado (stream directo) -->
-      <div style="text-align:center; margin-top:1em;">
-        <audio controls preload="none" style="width:100%; max-width:600px; border-radius:12px; background:rgba(255,255,255,0.08);">
-          <source src="https://stream.zeno.fm/qgeyqybkcd0uv" type="audio/mpeg">
-          Tu navegador no soporta audio en línea. <a href="https://rdomiplayer.com/landing/radio/1596/1" target="_blank" rel="noopener">Abrir radio en página</a>.
-        </audio>
-      </div>
-
-    </div>
-  </section>
-
-  <section id="galeria-videos">
+  <section id="MUSIC">
     <h2>🎵 FONTANERO MUSIC 🎵</h2>
     <p>Canciones que animan. ¿Quieres más? Ya sabes dónde encontrarme.</p>
     <div class="playlist">
@@ -176,34 +185,19 @@
   </section>
 
   <section id="inspiracion">
-  <h2>🛏️ Inspiración Pinterest</h2>
-  <div class="catalogo-card">
-    <p>Diseño de cabecera tapizada visto desde varios ángulos. Ideal para ambientes modernos y sobrios.</p>
-    <a href="https://es.pinterest.com/pin/211174975918470/" target="_blank">
-      <img src="https://i.pinimg.com/736x/70/95/54/709554e6be8da8d6c4483c4f2e93c630.jpg" alt="Cabecera tapizada Pinterest" style="max-width:100%; border-radius:12px; box-shadow:0 4px 20px rgba(0,0,0,0.15);">
-    </a>
-    <a href="https://es.pinterest.com/pin/211174975918470/" target="_blank">
-      <button>Ver en Pinterest</button>
-    </a>
-  </div>
-</section>
-
-  <!-- Nuevo bloque solicitado: Chat autónomos -->
-  <section id="chat-autonomos">
-    <h2>💬 Chat autónomos</h2>
+    <h2>h2</h2>
     <div class="catalogo-card">
-      <p>Interactúa con nuestros chatbots autónomos para obtener respuestas rápidas o divertirte. Este es un bloque de ejemplo que puedes conectar con tu servicio de chat favorito (iframe, Web...)</p>
-      <button id="openChat">Abrir Chat</button>
-      <div id="chatContainer" style="display:none; margin-top:1em;">
-        <!-- Placeholder: reemplaza el src por la URL de tu chat si la tienes -->
-        <iframe src="about:blank" title="Chat Autónomos" style="width:100%;height:300px;border-radius:12px;border:1px solid rgba(0,0,0,0.08)"></iframe>
-      </div>
     </div>
   </section>
 
-  <footer>
-    <p>&copy; 2025 LUMINARTE. Todos los derechos reservados.</p>
-  </footer>
+  <section id="catalogo">
+    <h2>h2</h2>
+    <div class="catalogo-card">
+      <p>MUSICA PA GO SA .</p>
+      <a href="radio.html" target="_self">Abrir aquí</a>
+      </a>
+    </div>
+  </section>
 
   <script>
     const videos = [
@@ -232,16 +226,16 @@
       div.className = "video";
       div.innerHTML = `
         <img src="https://img.youtube.com/vi/${id}/hqdefault.jpg" alt="Video preview">
-        <div class="play-button"></div>
+        <div class="play-button">▶️</div>
       `;
       div.addEventListener("click", () => {
         if (currentVideo && currentVideo !== div) {
+          const prevId = currentVideo.dataset.id;
           currentVideo.innerHTML = `
-            <img src="https://img.youtube.com/vi/${currentVideo.dataset.id}/hqdefault.jpg" alt="Video preview">
+            <img src="https://img.youtube.com/vi/${prevId}/hqdefault.jpg" alt="Video preview">
             <div class="play-button">▶️</div>
           `;
         }
-        div.dataset.id = id;
         div.innerHTML = `
           <iframe width="100%" height="200" src="https://www.youtube.com/embed/${id}?autoplay=1"
             frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -252,14 +246,16 @@
       videoGrid.appendChild(div);
     });
 
-    // Código para el bloque de Chat Autónomos
     const openChatBtn = document.getElementById('openChat');
     if (openChatBtn) {
       openChatBtn.addEventListener('click', () => {
         const container = document.getElementById('chatContainer');
-        if (container) container.style.display = container.style.display === 'none' ? 'block' : 'none';
+        if (container) {
+          container.style.display = container.style.display === 'none' ? 'block' : 'none';
+        }
       });
     }
+
   </script>
 </body>
 </html>
