--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- Open Graph -->
 <meta property="og:title" content="Mi Web Personal" />
 <meta property="og:description" content="Bienvenido a mi sitio web creado con GitHub Pages." />
-<meta property="og:image" content="https://rodrigoratouu-code.github.io/mi-weba/imagen.jpg" />
+<meta property="og:image" content="https://rodrigoratouu-code.github.io/mi-weba/LOGO AS..webp" />
 <meta property="og:url" content="https://rodrigoratouu-code.github.io/mi-weba" />
 <meta property="og:type" content="website" />
 
