Update Open Graph meta tags for the website

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
   <!-- Open Graph -->
-<meta property="og:title" content="Mi Web Personal" />
-<meta property="og:description" content="Bienvenido a mi sitio web creado con GitHub Pages." />
+<meta property="og:title" content="Mi Web Dans" />
+<meta property="og:description" content="Bienvenidos a mi sitio web" />
 <meta property="og:image" content="https://rodrigoratouu-code.github.io/mi-weba/RadioRD.webp" />
 <meta property="og:url" content="https://rodrigoratouu-code.github.io/mi-weba" />
 <meta property="og:type" content="website" />
