Update Twitter card metadata for the website

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Mi Web Personal" />
-<meta name="twitter:description" content="Bienvenido a mi sitio web creado con GitHub Pages." />
+<meta name="twitter:title" content="Mi Web Dans" />
+<meta name="twitter:description" content="Bienvenido a mi sitio web" />
 <meta name="twitter:image" content="https://rodrigoratouu-code.github.io/mi-weba/imagen.jpg" />
 
   <meta charset="UTF-8" />
